Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Address_for_email__c.field-meta.xml
<CustomField>
    <fullName>Address_for_email__c</fullName>
    <formula>IF(
  ISBLANK(City),
  &quot;Cubix, Hampton by Hilton, 42-50 Kimpton Road, Luton, Bedfordshire, LU2 0FP&quot;,
  IF(
    NOT(ISBLANK(Street)),
    Street + &quot;, &quot;,
    &quot;&quot;
  ) &amp;
  IF(
    NOT(ISBLANK(City)),
    City + &quot;, &quot;,
    &quot;&quot;
  ) &amp;
  IF(
    NOT(ISBLANK(State)),
    State + &quot;, &quot;,
    &quot;&quot;
  ) &amp;
  IF(
    NOT(ISBLANK(PostalCode)),
    PostalCode + &quot;, &quot;,
    &quot;&quot;
  ) &amp;
  IF(
    NOT(ISBLANK(Country)),
    Country,
    &quot;&quot;
  )
)</formula>
    <label>Address for email</label>
    <type>Text</type>
</CustomField>