Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Attract_Register_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Attract_Register_Candidates__c</fullName>
    <label>Attract &amp; Register Candidates</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speed of registration</fullName>
            </value>
            <value>
                <fullName>Candidates placed within 7 days</fullName>
            </value>
            <value>
                <fullName>BlueArrow App promotion</fullName>
            </value>
            <value>
                <fullName>Engaging our compliant candidates</fullName>
            </value>
            <value>
                <fullName>Shortlist management</fullName>
                <isActive>false</isActive>
                <label>Shortlist management</label>
            </value>
            <value>
                <fullName>Sourcing centre candidates</fullName>
                <isActive>false</isActive>
                <label>Sourcing centre candidates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>