Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_Type__c</fullName>
    <label>Batch Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IKEA</fullName>
            </value>
            <value>
                <fullName>Capita</fullName>
            </value>
            <value>
                <fullName>Beeline</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Shop Direct</fullName>
                <isActive>false</isActive>
                <label>Shop Direct</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>