Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <formula>Case( Brand__c,
&quot;Blue Arrow&quot;,&quot;BAL&quot;,
&quot;Tate&quot;,&quot;TATE&quot;,
&quot;SRG&quot;,&quot;LSL&quot;,
&quot;MGG&quot;,&quot;MGG&quot;,
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Code</label>
    <type>Text</type>
</CustomField>