Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/CDP_View__c.field-meta.xml
<CustomField>
    <fullName>CDP_View__c</fullName>
    <label>CDP View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>