Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Default_Sender_SMS__c.field-meta.xml
<CustomField>
    <fullName>Default_Sender_SMS__c</fullName>
    <label>Default Sender SMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>