Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Find_Work_Last_Used__c.field-meta.xml
<CustomField>
    <fullName>Find_Work_Last_Used__c</fullName>
    <label>Find Work Last Used</label>
    <type>DateTime</type>
</CustomField>