Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Find_Work_Sort__c.field-meta.xml
<CustomField>
    <fullName>Find_Work_Sort__c</fullName>
    <label>Find Work Sort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>