Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Fulfil_Client_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Fulfil_Client_Requirements__c</fullName>
    <label>Fulfil Client Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completion of check in calls</fullName>
            </value>
            <value>
                <fullName>Find Work/Shift invitation success</fullName>
            </value>
            <value>
                <fullName>Blue Arrow Candidate App/Portal engagement</fullName>
            </value>
            <value>
                <fullName>Fulfilment efficiency</fullName>
            </value>
            <value>
                <fullName>Proactive scheduler management</fullName>
            </value>
            <value>
                <fullName>Fulfilment %</fullName>
            </value>
            <value>
                <fullName>Scheduler alert management</fullName>
            </value>
            <value>
                <fullName>Cancellation intelligence</fullName>
                <isActive>false</isActive>
                <label>Cancellation intelligence</label>
            </value>
            <value>
                <fullName>Effective use of shift invitations</fullName>
                <isActive>false</isActive>
                <label>Effective use of shift invitations</label>
            </value>
            <value>
                <fullName>Shift fulfilment automation</fullName>
                <isActive>false</isActive>
                <label>Shift fulfilment automation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>