Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/GUID_user__c.field-meta.xml
<CustomField>
    <fullName>GUID_user__c</fullName>
    <label>GUID user</label>
    <length>100</length>
    <type>Text</type>
</CustomField>