Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Hide_Booked_temps__c.field-meta.xml
<CustomField>
    <fullName>Hide_Booked_temps__c</fullName>
    <label>Hide Booked temps</label>
    <length>10</length>
    <type>Text</type>
</CustomField>