Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Hide_Contact__c.field-meta.xml
<CustomField>
    <fullName>Hide_Contact__c</fullName>
    <label>Hide Contact</label>
    <length>10</length>
    <type>Text</type>
</CustomField>