Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Hide_invoice_details__c.field-meta.xml
<CustomField>
    <fullName>Hide_invoice_details__c</fullName>
    <defaultValue>&quot;hide&quot;</defaultValue>
    <label>Hide invoice details</label>
    <length>10</length>
    <type>Text</type>
</CustomField>