Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Hide_Shift_Approval__c.field-meta.xml
<CustomField>
    <fullName>Hide_Shift_Approval__c</fullName>
    <label>Hide Shift Approval</label>
    <length>10</length>
    <type>Text</type>
</CustomField>