Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Hide_temp_hours__c.field-meta.xml
<CustomField>
    <fullName>Hide_temp_hours__c</fullName>
    <label>Hide temp hours</label>
    <length>10</length>
    <type>Text</type>
</CustomField>