Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/HR_Number__c.field-meta.xml
<CustomField>
    <fullName>HR_Number__c</fullName>
    <label>HR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>