Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Identify_Onboard_Potential_Clients__c.field-meta.xml
<CustomField>
    <fullName>Identify_Onboard_Potential_Clients__c</fullName>
    <label>Identify &amp; Onboard Potential Clients</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New business leads</fullName>
            </value>
            <value>
                <fullName>New business lead conversion</fullName>
            </value>
            <value>
                <fullName>New active accounts</fullName>
            </value>
            <value>
                <fullName>New active sites</fullName>
            </value>
            <value>
                <fullName>Sales Activity</fullName>
            </value>
            <value>
                <fullName>Service activity</fullName>
            </value>
            <value>
                <fullName>Future planned sales activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>