Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/idibu__Application_URL_Base__c.field-meta.xml
<CustomField>
    <fullName>idibu__Application_URL_Base__c</fullName>
    <label>Application URL Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>