Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/idibu__Idibu_Default_country__c.field-meta.xml
<CustomField>
    <fullName>idibu__Idibu_Default_country__c</fullName>
    <label>Default posting country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United Kingdom (GB)</fullName>
                <default>true</default>
                <label>United Kingdom (GB)</label>
            </value>
            <value>
                <fullName>Andorra (AD)</fullName>
            </value>
            <value>
                <fullName>Angola (AN)</fullName>
            </value>
            <value>
                <fullName>Argentina (AR)</fullName>
            </value>
            <value>
                <fullName>Australia (AU)</fullName>
            </value>
            <value>
                <fullName>Austria (AT)</fullName>
            </value>
            <value>
                <fullName>Barbados (BB)</fullName>
            </value>
            <value>
                <fullName>Belgium (BE)</fullName>
            </value>
            <value>
                <fullName>Bermuda (BM)</fullName>
            </value>
            <value>
                <fullName>Brazil (BR)</fullName>
            </value>
            <value>
                <fullName>Bulgaria (BG)</fullName>
            </value>
            <value>
                <fullName>Canada (CA)</fullName>
            </value>
            <value>
                <fullName>Czech Republic (CZ)</fullName>
            </value>
            <value>
                <fullName>Channel Islands (GG)</fullName>
            </value>
            <value>
                <fullName>China (CN)</fullName>
            </value>
            <value>
                <fullName>Croatia (HR)</fullName>
            </value>
            <value>
                <fullName>Denmark (DM)</fullName>
            </value>
            <value>
                <fullName>Egypt (EG)</fullName>
            </value>
            <value>
                <fullName>Faroe Islands (FO)</fullName>
            </value>
            <value>
                <fullName>France (FR)</fullName>
            </value>
            <value>
                <fullName>Germany (DE)</fullName>
            </value>
            <value>
                <fullName>Guadeloupe (GP)</fullName>
            </value>
            <value>
                <fullName>Guam (GU)</fullName>
            </value>
            <value>
                <fullName>Hong Kong (HG)</fullName>
            </value>
            <value>
                <fullName>Hungary (HU)</fullName>
            </value>
            <value>
                <fullName>India (IN)</fullName>
            </value>
            <value>
                <fullName>Indonesia (ID)</fullName>
            </value>
            <value>
                <fullName>Ireland (IE)</fullName>
            </value>
            <value>
                <fullName>Isle of Man (IM)</fullName>
            </value>
            <value>
                <fullName>Italy (IT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>