Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/idibu__IdibuSync__c.field-meta.xml
<CustomField>
    <fullName>idibu__IdibuSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes the state of idibu user synchronization. If checked and saved it automatically creates a user profile within Idibu and assigns the correct Idibu User Id.</description>
    <label>Synchronized with idibu</label>
    <type>Checkbox</type>
</CustomField>