Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/idibu__IdibuTeamId__c.field-meta.xml
<CustomField>
    <fullName>idibu__IdibuTeamId__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Idibu Team ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>