Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/idibu__IdibuUserId__c.field-meta.xml
<CustomField>
    <fullName>idibu__IdibuUserId__c</fullName>
    <label>Idibu User Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>