Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Invoice_Clients_Correctly__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Clients_Correctly__c</fullName>
    <label>Invoice Clients Correctly</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Arrow client portal uptake engagement</fullName>
            </value>
            <value>
                <fullName>Blue Arrow client portal approval engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>