Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/IP_Broadbean_User_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Broadbean_User_Name__c</fullName>
    <formula>$Setup.JSP__broadbean_settings__c.JSP__broadbean_client_id__c</formula>
    <label>Broadbean User Name</label>
    <type>Text</type>
</CustomField>