Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/IP_LastPassedToTempest__c.field-meta.xml
<CustomField>
    <fullName>IP_LastPassedToTempest__c</fullName>
    <label>Last Passed to Tempest</label>
    <type>DateTime</type>
</CustomField>