Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/IP_PassToTempest__c.field-meta.xml
<CustomField>
    <fullName>IP_PassToTempest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass to Tempest</label>
    <type>Checkbox</type>
</CustomField>