Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/IP_Regional_Area__c.field-meta.xml
<CustomField>
    <fullName>IP_Regional_Area__c</fullName>
    <label>Regional Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East Anglia</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
            <value>
                <fullName>Northants, Beds and Bucks</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North Scotland</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>Outer London</fullName>
            </value>
            <value>
                <fullName>Rest of Scotland</fullName>
            </value>
            <value>
                <fullName>Shop Direct</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>Thames Valley</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>Yorkshire</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>East England</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>