Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/IP_TempestDepartment__c.field-meta.xml
<CustomField>
    <fullName>IP_TempestDepartment__c</fullName>
    <label>Tempest Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_TempestDepartment</valueSetName>
    </valueSet>
</CustomField>