Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/IP_TempestDivision__c.field-meta.xml
<CustomField>
    <fullName>IP_TempestDivision__c</fullName>
    <label>Tempest Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_TempestDivision</valueSetName>
    </valueSet>
</CustomField>