Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/IP_TempestID__c.field-meta.xml
<CustomField>
    <fullName>IP_TempestID__c</fullName>
    <description>ID need for passing to payroll</description>
    <externalId>true</externalId>
    <inlineHelpText>The ID needed for payroll detail passed</inlineHelpText>
    <label>Tempest ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>