Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Legacy_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy User ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>