Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Milage_Radius__c.field-meta.xml
<CustomField>
    <fullName>Milage_Radius__c</fullName>
    <label>Mileage Radius</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>