Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Suffix+&quot; &quot;+FirstName+&quot; &quot;+LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>