Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/National_Account_Bypass__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Account Bypass</label>
    <type>Checkbox</type>
</CustomField>