Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/NI_Number__c.field-meta.xml
<CustomField>
    <fullName>NI_Number__c</fullName>
    <label>NI Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>