Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/NumberOfShifts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfShifts__c</fullName>
    <label>NumberOfShifts</label>
    <length>10</length>
    <type>Text</type>
</CustomField>