Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <formula>Contact.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>