Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Payroll_FEs_Correctly_and_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Payroll_FEs_Correctly_and_on_Time__c</fullName>
    <label>Payroll FE&apos;s Correctly and on Time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workforce management accuracy</fullName>
            </value>
            <value>
                <fullName>Overall payroll completion</fullName>
            </value>
            <value>
                <fullName>Payroll accuracy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>