Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Pilot_Tester__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Tester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot Tester</label>
    <type>Checkbox</type>
</CustomField>