Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Previous_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Previous_Shifts__c</fullName>
    <label>Previous Shifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>