Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Salesforce_Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Instance_URL__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_270, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_270) -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Instance URL</label>
    <type>Text</type>
</CustomField>