Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Shift_List__c.field-meta.xml
<CustomField>
    <fullName>Shift_List__c</fullName>
    <label>Shift List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>