Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/sirenum__Default_Candidate_Pool__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Default_Candidate_Pool__c</fullName>
    <label>Default Candidate Pool (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>