Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2__BehPwd__c.field-meta.xml
<CustomField>
    <fullName>ts2__BehPwd__c</fullName>
    <label>BehPwd</label>
    <length>64</length>
    <type>Text</type>
</CustomField>