Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2__BehUser__c.field-meta.xml
<CustomField>
    <fullName>ts2__BehUser__c</fullName>
    <label>BehUser</label>
    <length>64</length>
    <type>Text</type>
</CustomField>