Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2__BKPwd__c.field-meta.xml
<CustomField>
    <fullName>ts2__BKPwd__c</fullName>
    <description>Background Checking Intration</description>
    <label>BKPwd</label>
    <length>64</length>
    <type>Text</type>
</CustomField>