Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2__CVUser__c.field-meta.xml
<CustomField>
    <fullName>ts2__CVUser__c</fullName>
    <description>Intelligent Search Integration</description>
    <label>CVUser</label>
    <length>64</length>
    <type>Text</type>
</CustomField>