Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2__JobUser__c.field-meta.xml
<CustomField>
    <fullName>ts2__JobUser__c</fullName>
    <description>JobTarget Oneclick Integration.</description>
    <label>JobUser</label>
    <length>64</length>
    <type>Text</type>
</CustomField>