Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2__s_contact_field_list__c.field-meta.xml
<CustomField>
    <fullName>ts2__s_contact_field_list__c</fullName>
    <label>Contact Field List</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>