Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2__Site__c.field-meta.xml
<CustomField>
    <fullName>ts2__Site__c</fullName>
    <label>Contact Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>