Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2extams__Default_AMS_Filter__c.field-meta.xml
<CustomField>
    <fullName>ts2extams__Default_AMS_Filter__c</fullName>
    <label>Default AMS Filter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>