Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2extams__Default_AMS_Order__c.field-meta.xml
<CustomField>
    <fullName>ts2extams__Default_AMS_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default AMS Order</label>
    <type>Checkbox</type>
</CustomField>