Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2extams__Default_AMS_Order_Field__c.field-meta.xml
<CustomField>
    <fullName>ts2extams__Default_AMS_Order_Field__c</fullName>
    <label>Default AMS Order Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>