Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2extams__Default_AMS_Record_on_Page__c.field-meta.xml
<CustomField>
    <fullName>ts2extams__Default_AMS_Record_on_Page__c</fullName>
    <label>Default AMS Record on Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>