Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2sourcing__SCdefaultSearch__c.field-meta.xml
<CustomField>
    <fullName>ts2sourcing__SCdefaultSearch__c</fullName>
    <description>default saved search Id - Sourcing Center</description>
    <label>SCdefaultSearch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>