Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/ts2sourcing__SCOrgWideDefaultId__c.field-meta.xml
<CustomField>
    <fullName>ts2sourcing__SCOrgWideDefaultId__c</fullName>
    <description>Org wide default saved search Id - Sourcing Center</description>
    <label>SCOrgWideDefaultId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>