Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <label>Updated</label>
    <type>DateTime</type>
</CustomField>