Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/User_Image__c.field-meta.xml
<CustomField>
    <fullName>User_Image__c</fullName>
    <label>User Image</label>
    <type>Url</type>
</CustomField>