Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/User_Image_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>User_Image_Uploaded__c</fullName>
    <label>User Image Uploaded</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>