Frankbelford/uatv1ba/force-app/main/default/objects/User/fields/View_Past_Shifts__c.field-meta.xml
<CustomField>
    <fullName>View_Past_Shifts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Past Shifts</label>
    <type>Checkbox</type>
</CustomField>