Frankbelford/uatv1ba/force-app/main/default/objects/User/validationRules/Test_User_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_User_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Username = &apos;mko.vfr@njh.com&apos; &amp;&amp; not(isblank( GUID_user__c ))</errorConditionFormula>
    <errorDisplayField>EmailPreferences</errorDisplayField>
    <errorMessage>Error for Test class</errorMessage>
</ValidationRule>