Frankbelford/uatv1ba/force-app/main/default/objects/User/listViews/All_BA_Users.listView-meta.xml
<ListView>
    <fullName>All_BA_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>Email_community__c</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>JS Recruiter - Hybrid,back office,JS admin tier 1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>HAS_USER_VERIFIED_EMAIL</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All BA Users</label>
    <language>en_US</language>
</ListView>