Frankbelford/uatv1ba/force-app/main/default/objects/User/listViews/Branch_Users.listView-meta.xml
<ListView>
    <fullName>Branch_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>IP_Region__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>IP_TempestDepartment__c</columns>
    <columns>IP_TempestDivision__c</columns>
    <columns>IP_TempestID__c</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_BY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>JS</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Branch Users</label>
    <language>en_US</language>
</ListView>